<resources>
    <string name="app_name">Denuncias Viales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>

    <string name="menu_home">Home</string>
    <string name="menu_hacerDenuncia">Hacer denuncia</string>
    <string name="menu_misDenuncias">Mis denuncias</string>
    <string name="menu_miUbicacion">Mi ubicacion</string>
    <string name="menu_misInfracciones">Mis infracciones</string>
    <string name="menu_configuracion">Cambiar contraseña</string>
    <string name="menu_close">Salir</string>

    <string name="home_second">Home Second</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
